--- a/src/main/resources/fxml/fanScreen.fxml
+++ b/src/main/resources/fxml/fanScreen.fxml
@@ -1,23 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="651.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="96.0" layoutY="72.0" text="Imie" />
-      <Label layoutX="93.0" layoutY="120.0" text="Nazwisko" />
-      <Label layoutX="93.0" layoutY="179.0" text="Wiek" />
-      <Label layoutX="93.0" layoutY="223.0" text="Pseudonim" />
-      <Label fx:id="namelabel" layoutX="259.0" layoutY="72.0" text="Label" />
-      <Label fx:id="surnameLabel" layoutX="259.0" layoutY="120.0" text="Label" />
-      <Label fx:id="ageLabel" layoutX="259.0" layoutY="179.0" text="Label" />
-      <Label fx:id="nicknameLabel" layoutX="259.0" layoutY="223.0" text="Label" />
-      <VBox fx:id="footballersVBox" layoutX="382.0" layoutY="72.0" prefHeight="200.0" prefWidth="100.0" />
-      <Label layoutX="372.0" layoutY="37.0" text="Wspierani PIlkarze" />
-      <Label layoutX="516.0" layoutY="37.0" text="Wspierane druzyny" />
-      <VBox fx:id="teamsVBox" layoutX="529.0" layoutY="90.0" prefHeight="200.0" prefWidth="100.0" />
+      <Label fx:id="titleLabel" alignment="CENTER" text="Imię nazwisko">
+         <font>
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </Label>
+      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="377.0" prefWidth="600.0" spacing="20.0">
+         <children>
+            <GridPane hgap="5.0" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="59.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label alignment="CENTER_RIGHT" prefWidth="90.0" text="Pseudonim" />
+                  <Label fx:id="nicknameLabel" maxWidth="1.7976931348623157E308" text="sajfahsjfhaskjfh" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Imię" GridPane.rowIndex="1" />
+                  <Label fx:id="nameLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Nazwisko" GridPane.rowIndex="2" />
+                  <Label fx:id="surnameLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Wiek" GridPane.rowIndex="3" />
+                  <Label fx:id="ageLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
+            <VBox maxWidth="1.7976931348623157E308" prefHeight="246.0" prefWidth="180.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" style="-fx-border-width: 0 0 2 0; -fx-border-color: darkgray; -fx-background-color: forestgreen;" text="Wspierani piłkarze" textFill="WHITE" VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="600.0" maxWidth="1.7976931348623157E308" minHeight="0.0" prefWidth="180.0" VBox.vgrow="NEVER">
+                     <content>
+                        <VBox fx:id="footballersVBox" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="178.0" style="-fx-background-color: transparent;" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+            <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="180.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" style="-fx-background-color: forestgreen; -fx-text-fill: white; -fx-border-width: 0 0 2 0; -fx-border-color: darkgray;" text="Wspierane drużyny" VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane fitToWidth="true" maxHeight="600.0" maxWidth="1.7976931348623157E308" minHeight="0.0" prefWidth="180.0" VBox.vgrow="NEVER">
+                     <content>
+                        <VBox fx:id="teamsVBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="100.0" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
-</Pane>
+   <padding>
+      <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
+   </padding>
+</VBox>
