--- a/src/main/resources/fxml/coachScreen.fxml
+++ b/src/main/resources/fxml/coachScreen.fxml
@@ -1,18 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="92.0" layoutY="98.0" text="Imie" />
-      <Label layoutX="92.0" layoutY="153.0" text="Nazwisko" />
-      <Label layoutX="92.0" layoutY="212.0" text="Wiek" />
-      <Label layoutX="91.0" layoutY="260.0" text="Trener w  " />
-      <Label fx:id="nameLabel" layoutX="206.0" layoutY="98.0" text="Label" />
-      <Label fx:id="surnameLabel" layoutX="206.0" layoutY="153.0" text="Label" />
-      <Label fx:id="ageLabel" layoutX="206.0" layoutY="212.0" text="Label" />
-      <Label fx:id="teamLabel" layoutX="206.0" layoutY="260.0" text="Label" />
+      <Label fx:id="titleLabel" alignment="CENTER" text="Nazwa Druzyny">
+         <font>
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+         <padding>
+            <Insets bottom="20.0" />
+         </padding>
+      </Label>
+      <GridPane hgap="5.0" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="59.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Label alignment="CENTER_RIGHT" prefWidth="90.0" text="Trener w" />
+            <Label fx:id="teamLabel" maxWidth="1.7976931348623157E308" stylesheets="@../css/label.css" text="sajfahsjfhaskjfh" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Imię" GridPane.rowIndex="1" />
+            <Label fx:id="nameLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Nazwisko" GridPane.rowIndex="2" />
+            <Label fx:id="surnameLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Wiek" GridPane.rowIndex="3" />
+            <Label fx:id="ageLabel" maxWidth="1.7976931348623157E308" text="Label" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
    </children>
-</Pane>
+   <padding>
+      <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
+   </padding>
+</VBox>
