--- a/src/main/resources/fxml/footballerScreen.fxml
+++ b/src/main/resources/fxml/footballerScreen.fxml
@@ -1,24 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="CENTER_RIGHT" layoutX="121.0" layoutY="92.0" prefHeight="21.0" prefWidth="126.0" text="Imie" />
-      <Label alignment="CENTER_RIGHT" layoutX="123.0" layoutY="138.0" prefHeight="21.0" prefWidth="126.0" text="Nazwisko" />
-      <Label alignment="CENTER_RIGHT" layoutX="121.0" layoutY="190.0" prefHeight="21.0" prefWidth="126.0" text="Klub" />
-      <Label alignment="CENTER_RIGHT" layoutX="123.0" layoutY="248.0" prefHeight="21.0" prefWidth="126.0" text="Pozycja" />
-      <Label alignment="CENTER_RIGHT" layoutX="130.0" layoutY="295.0" text="Numer na koszulce" />
-      <VBox fx:id="fansVBox" layoutX="474.0" layoutY="80.0" prefHeight="248.0" prefWidth="126.0" />
-      <Label fx:id="name" layoutX="291.0" layoutY="92.0" text="Paul" />
-      <Label fx:id="surname" layoutX="291.0" layoutY="138.0" text="Pogba" />
-      <Label fx:id="team" layoutX="291.0" layoutY="190.0" text="ManchesterUnited" />
-      <Label fx:id="position" layoutX="291.0" layoutY="248.0" text="PO" />
-      <Label fx:id="shirtNumber" layoutX="291.0" layoutY="295.0" text="6" />
-      <Button fx:id="supportButton" layoutX="43.0" layoutY="37.0" mnemonicParsing="false" onAction="#supportFootballer" text="Kibicuj" />
-      <Button fx:id="stopSupportButton" disable="true" layoutX="579.0" layoutY="37.0" mnemonicParsing="false" onAction="#stopSupport" prefHeight="31.0" prefWidth="154.0" text="Przestań kibicować" />
+      <Label fx:id="titleLabel" alignment="CENTER" text="Imię nazwisko">
+         <font>
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+         <VBox.margin>
+            <Insets bottom="20.0" />
+         </VBox.margin>
+      </Label>
+      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="377.0" prefWidth="600.0" spacing="20.0">
+         <children>
+            <GridPane hgap="5.0" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="59.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label alignment="CENTER_RIGHT" prefWidth="90.0" text="Imię" />
+                  <Label fx:id="name" maxWidth="1.7976931348623157E308" text="Paul" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Nazwisko" GridPane.rowIndex="1" />
+                  <Label fx:id="surname" maxWidth="1.7976931348623157E308" text="Pogba" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Klub" GridPane.rowIndex="2" />
+                  <Label fx:id="team" maxWidth="1.7976931348623157E308" stylesheets="@../css/label.css" text="Manchester" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Pozycja" GridPane.rowIndex="3" />
+                  <Label fx:id="position" maxWidth="1.7976931348623157E308" text="PO" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Numer" GridPane.rowIndex="4" />
+                  <Label fx:id="shirtNumber" maxWidth="1.7976931348623157E308" text="6" textFill="FORESTGREEN" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
+            <VBox maxWidth="1.7976931348623157E308" prefHeight="246.0" prefWidth="180.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" style="-fx-border-width: 0 0 2 0; -fx-border-color: darkgray; -fx-background-color: forestgreen;" text="Kibice zawodnika" textFill="WHITE" VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="600.0" maxWidth="1.7976931348623157E308" minHeight="0.0" prefWidth="180.0" VBox.vgrow="NEVER">
+                     <content>
+                        <VBox fx:id="fansVBox" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="178.0" style="-fx-background-color: transparent;" />
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button fx:id="supportButton" mnemonicParsing="false" onAction="#support" styleClass="greenBuuton" stylesheets="@../css/menuBarButton.css" text="Kibicuj">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Separator opacity="0.0" prefHeight="9.0" prefWidth="232.0" />
+            <Button fx:id="stopSupportButton" mnemonicParsing="false" onAction="#stopSupport" styleClass="greenBuuton" stylesheets="@../css/menuBarButton.css" text="Przestań kibicować">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+         </children>
+      </HBox>
    </children>
-</Pane>
+   <padding>
+      <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
+   </padding>
+</VBox>
