--- a/src/main/resources/fxml/footballersTableScreen.fxml
+++ b/src/main/resources/fxml/footballersTableScreen.fxml
@@ -1,34 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="600.0" prefHeight="400.0" prefWidth="650.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="600.0" prefHeight="400.0" prefWidth="650.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Separator prefWidth="200.0" />
-      <HBox alignment="CENTER">
+      <Label text="PIŁKARZE">
+         <font>
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+         <VBox.margin>
+            <Insets bottom="20.0" />
+         </VBox.margin>
+      </Label>
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Imie" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" prefWidth="2.0" />
-            <Label alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Nazwisko" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Druzyna" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" style="-fx-background-color: white;" text="Numer" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" style="-fx-background-color: white;" text="Pozycja" />
-            <Separator orientation="VERTICAL" />
-            <Label minWidth="15.0" />
+            <Label fx:id="nameLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" stylesheets="@../css/menuBarButton.css" text="Imie">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Label>
+            <Label fx:id="surnameLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" stylesheets="@../css/menuBarButton.css" text="Nazwisko" GridPane.columnIndex="1">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Label>
+            <Label fx:id="teamLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" stylesheets="@../css/menuBarButton.css" text="Druzyna" GridPane.columnIndex="2">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Label>
+            <Label fx:id="numberLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="50.0" minWidth="24.0" prefHeight="21.0" prefWidth="24.0" stylesheets="@../css/menuBarButton.css" text="Numer" textAlignment="CENTER" GridPane.columnIndex="3">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Label>
+            <Label fx:id="positionLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" stylesheets="@../css/menuBarButton.css" text="Pozycja" GridPane.columnIndex="4">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
          </children>
-      </HBox>
-      <Separator prefWidth="200.0" />
-      <ListView fx:id="listView" prefHeight="600.0" prefWidth="200.0" />
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+         <padding>
+            <Insets right="17.0" />
+         </padding>
+      </GridPane>
+      <ScrollPane fitToWidth="true" maxHeight="700.0" vbarPolicy="ALWAYS">
+         <content>
+            <GridPane fx:id="gridPane">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="150.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
+               </columnConstraints>
+            </GridPane>
+         </content>
+      </ScrollPane>
    </children>
    <padding>
-      <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+      <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
    </padding>
 </VBox>
