--- a/src/main/resources/fxml/optionScreen.fxml
+++ b/src/main/resources/fxml/optionScreen.fxml
@@ -1,44 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="772.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="55.0" layoutY="40.0" text="Imie" />
-      <Label layoutX="55.0" layoutY="86.0" text="Nazwisko" />
-      <Label layoutX="55.0" layoutY="137.0" text="Pseudonim" />
-      <Label layoutX="55.0" layoutY="179.0" text="Stare Hasło" />
-      <Label layoutX="55.0" layoutY="231.0" text="Nowe Hasło" />
-      <Label layoutX="2.0" layoutY="292.0" text="Powtórz nowe hasło" />
-      <Label layoutX="65.0" layoutY="339.0" text="Wiek" />
-      <TextField fx:id="nameTextField" layoutX="150.0" layoutY="35.0" onMouseClicked="#edit" />
-      <TextField fx:id="surnameTextField" layoutX="150.0" layoutY="81.0" />
-      <TextField fx:id="nicknameTextField" layoutX="150.0" layoutY="132.0" />
-      <PasswordField fx:id="oldPasswordTextFIeld" layoutX="150.0" layoutY="174.0" />
-      <PasswordField fx:id="newPasswordTextField" layoutX="150.0" layoutY="226.0" />
-      <PasswordField fx:id="newPasswordRepeatTextField" layoutX="150.0" layoutY="287.0" />
-      <TextField fx:id="agetextField" layoutX="150.0" layoutY="334.0" />
-      <Label layoutX="446.0" layoutY="25.0" text="Pilkarze" />
-      <Label layoutX="470.0" layoutY="242.0" text="Druzyny" />
-      <VBox fx:id="supportedTeamsVBox" layoutX="447.0" layoutY="279.0" prefHeight="91.0" prefWidth="100.0" />
-      <Button layoutX="260.0" layoutY="365.0" mnemonicParsing="false" onAction="#edit" prefHeight="23.0" prefWidth="80.0" text="EDIT">
+      <Label fx:id="name" text="Opcje">
          <font>
-            <Font size="10.0" />
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+         <VBox.margin>
+            <Insets bottom="20.0" />
+         </VBox.margin>
+      </Label>
+      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="377.0" prefWidth="600.0" spacing="20.0">
+         <children>
+            <GridPane hgap="5.0" maxWidth="1.7976931348623157E308" prefHeight="368.0" prefWidth="330.0" HBox.hgrow="ALWAYS">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="59.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="138.0" text="Imie" />
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Nazwisko" GridPane.rowIndex="1" />
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Pseudonim" GridPane.rowIndex="2" />
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Stare Hasło" GridPane.rowIndex="3" />
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Nowe Hasło" GridPane.rowIndex="4" />
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Powtórz Nowe Hasło" GridPane.rowIndex="5" />
+                  <TextField fx:id="nameTextField" onMouseClicked="#edit" GridPane.columnIndex="1" />
+                  <TextField fx:id="surnameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="nicknameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="oldPasswordTextFIeld" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <PasswordField fx:id="newPasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <PasswordField fx:id="newPasswordRepeatTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="agetextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Wiek" GridPane.rowIndex="6" />
+               </children>
+            </GridPane>
+            <VBox maxWidth="1.7976931348623157E308" prefHeight="246.0" prefWidth="180.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefWidth="200.0" style="-fx-border-width: 0 0 2 0; -fx-border-color: darkgray; -fx-background-color: forestgreen;" text="Pilkarze" textFill="WHITE" VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="600.0" maxWidth="1.7976931348623157E308" minHeight="0.0" prefWidth="180.0" VBox.vgrow="NEVER">
+                     <content>
+                        <GridPane fx:id="footballersGridPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="200.0" style="-fx-background-color: transparent;">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="150.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+                          </columnConstraints>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+            <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="180.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" style="-fx-background-color: forestgreen; -fx-text-fill: white; -fx-border-width: 0 0 2 0; -fx-border-color: darkgray;" text="Druzyny" VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane fitToWidth="true" maxHeight="600.0" maxWidth="1.7976931348623157E308" minHeight="0.0" prefWidth="180.0" VBox.vgrow="NEVER">
+                     <content>
+                        <GridPane fx:id="teamsGridPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" style="-fx-background-color: transparent;">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="150.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+                           </columnConstraints>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#edit" prefHeight="30.0" prefWidth="98.0" styleClass="greenBuuton" stylesheets="@../css/menuBarButton.css" text="EDYTUJ">
+         <font>
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <GridPane fx:id="footballersGridPane" layoutX="371.0" layoutY="67.0" prefHeight="23.0" prefWidth="200.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="155.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="10.0" prefWidth="45.0" />
-        </columnConstraints>
-      </GridPane>
    </children>
-</Pane>
+   <padding>
+      <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
+   </padding>
+</VBox>
