--- a/src/main/resources/fxml/registerScreen.fxml
+++ b/src/main/resources/fxml/registerScreen.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<HBox alignment="CENTER" style="-fx-background-color: linear-gradient(to bottom, #8e8e8e, #373737);" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER" minWidth="320.0" style="-fx-background-color: linear-gradient(to bottom, #8e8e8e, #373737);" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER" prefHeight="386.0" prefWidth="238.0" spacing="5.0">
          <children>
