--- a/src/main/resources/fxml/resultTableScreen.fxml
+++ b/src/main/resources/fxml/resultTableScreen.fxml
@@ -1,36 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="600.0" prefHeight="400.0" prefWidth="650.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="700.0" minHeight="-Infinity" minWidth="600.0" prefHeight="700.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Separator prefWidth="200.0" />
-      <HBox alignment="CENTER">
+      <Label text="WYNIKI MECZÓW">
+         <font>
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+         <VBox.margin>
+            <Insets bottom="20.0" />
+         </VBox.margin>
+      </Label>
+      <GridPane>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Gospodarz" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" prefWidth="2.0" />
-            <Label alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Wynik" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Gość" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: white;" text="Data" />
-            <Separator orientation="VERTICAL" />
-            <Label minWidth="15.0" />
+            <Label fx:id="homeLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" stylesheets="@../css/menuBarButton.css" text="Gospodarz">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" style="-fx-background-color: forestgreen; -fx-text-fill: white; -fx-border-color: lightgray;" text="Wynik" GridPane.columnIndex="1" />
+            <Label fx:id="awayLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" stylesheets="@../css/menuBarButton.css" text="Gość" GridPane.columnIndex="2">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label fx:id="dateLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="138.0" prefHeight="30.0" prefWidth="138.0" stylesheets="@../css/menuBarButton.css" text="Data" GridPane.columnIndex="3">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
          </children>
-      </HBox>
-      <Separator prefWidth="200.0" />
-      <ScrollPane fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="200.0">
+         <padding>
+            <Insets right="17.0" />
+         </padding>
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </GridPane>
+      <ScrollPane fitToWidth="true" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="200.0" vbarPolicy="ALWAYS">
          <content>
-            <VBox fx:id="vbox" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="200.0" />
+            <GridPane fx:id="gridPane">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+            </GridPane>
          </content>
       </ScrollPane>
    </children>
    <padding>
-      <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+      <Insets bottom="7.0" left="7.0" right="7.0" top="30.0" />
    </padding>
 </VBox>
