--- a/src/main/resources/fxml/tableScreen.fxml
+++ b/src/main/resources/fxml/tableScreen.fxml
@@ -1,34 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<VBox fx:id="vbox" alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vbox" alignment="TOP_CENTER" maxHeight="-Infinity" minHeight="-Infinity" minWidth="700.0" prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Separator prefWidth="200.0" />
-      <HBox alignment="CENTER">
+      <Label text="TABELA WYNIKÓW">
+         <font>
+            <Font name="Arial Bold" size="41.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="20.0" />
+         </VBox.margin>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop color="#514a4a" />
+                  <Stop color="#00872a" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </textFill>
+      </Label>
+      <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308">
+        <columnConstraints>
+            <ColumnConstraints hgrow="NEVER" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="91.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" />
+            <ColumnConstraints hgrow="NEVER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" style="-fx-background-color: white;" text="Pozycja" />
-            <Separator orientation="VERTICAL" prefWidth="2.0" />
-            <Label alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" style="-fx-background-color: white;" text="Druzyna" HBox.hgrow="ALWAYS" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" style="-fx-background-color: white;" text="Pkt" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" style="-fx-background-color: white;" text="W" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" style="-fx-background-color: white;" text="R" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" style="-fx-background-color: white;" text="P" />
-            <Separator orientation="VERTICAL" />
-            <Label alignment="TOP_CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" minWidth="20.0" prefWidth="200.0" style="-fx-background-color: white;" text="Trener" textAlignment="RIGHT" HBox.hgrow="ALWAYS" />
+            <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" style="-fx-background-color: forestgreen; -fx-text-fill: white; -fx-border-color: lightgray;" text="Numer" GridPane.vgrow="ALWAYS" />
+            <Label fx:id="teamLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="91.0" prefHeight="21.0" prefWidth="91.0" stylesheets="@../css/menuBarButton.css" text="Druzyna" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label fx:id="pointsLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" stylesheets="@../css/menuBarButton.css" text="Pkt" GridPane.columnIndex="2">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label fx:id="winsLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" stylesheets="@../css/menuBarButton.css" text="W" GridPane.columnIndex="3">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label fx:id="drawsLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" stylesheets="@../css/menuBarButton.css" text="R" GridPane.columnIndex="4">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label fx:id="losesLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" stylesheets="@../css/menuBarButton.css" text="P" textAlignment="CENTER" GridPane.columnIndex="5">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
+            <Label fx:id="coachLabel" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="20.0" prefHeight="21.0" prefWidth="171.0" stylesheets="@../css/menuBarButton.css" text="Trener" textAlignment="CENTER" GridPane.columnIndex="6">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Label>
          </children>
-      </HBox>
-      <Separator prefWidth="200.0" />
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+         <padding>
+            <Insets right="17.0" />
+         </padding>
+      </GridPane>
+      <ScrollPane fitToWidth="true" maxHeight="700.0" vbarPolicy="ALWAYS">
+         <content>
+            <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="1.7976931348623157E308">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="NEVER" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="91.0" prefWidth="300.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" />
+                  <ColumnConstraints hgrow="NEVER" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
+               </columnConstraints>
+            </GridPane>
+         </content>
+      </ScrollPane>
    </children>
    <padding>
-      <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+      <Insets bottom="30.0" left="10.0" right="10.0" top="30.0" />
    </padding>
 </VBox>
